--- a/index.html
+++ b/index.html
@@ -13,30 +13,40 @@
         <input type="file" id="fileInput" accept=".txt,.json" style="display: none;">
 
         <div id="ui-container">
-            <div id="world-controls">
-                <button id="playPauseButton">Play</button>
-                <label for="speedSlider">Speed:</label>
-                <input type="range" id="speedSlider" name="speedSlider" min="1" max="60" value="10" step="1">
-                <span id="speedValue">10</span> tps
-                <span class="separator">|</span>
-                <label for="neighborhoodSize">Brush:</label>
-                <input type="range" id="neighborhoodSize" name="neighborhoodSize" min="0" max="5" value="1" step="1">
-                <span id="neighborhoodValue">1</span>
-                <span class="separator">|</span>
-                <button id="randomRulesetButton">New Ruleset</button>
-                <input type="checkbox" id="resetOnNewRuleCheckbox" title="Reset all world states when generating a new ruleset"> <label for="resetOnNewRuleCheckbox" style="cursor:pointer; user-select:none;">Reset States</label>
-                <button id="copyRuleButton" title="Copy current ruleset hex code">Copy Rule</button>
-                <label for="rulesetInput">Set Rule:</label>
-                <input type="text" id="rulesetInput" placeholder="Paste 32 hex chars" size="35">
-                <button id="setRuleButton">Set</button>
-                <span> | Rule: <code id="rulesetDisplay">N/A</code></span>
-                <span class="separator">|</span>
-                <button id="saveStateButton" title="Save current grid state">Save State</button>
-                <button id="loadStateButton" title="Load grid state from .json/.txt file">Load State</button>
-                <span class="separator">|</span>
-                <button id="resetStatesButton" title="Reset all worlds to initial densities">Reset States</button>
+            <div id="controls-wrapper">
+                <div class="ui-group" id="group-title">
+                    <span class="rule-display-wrapper"><code id="rulesetDisplay">N/A</code></span>
+                </div>
+                <div class="ui-group" id="group-playback">
+                    <button id="playPauseButton">Play</button>
+                    <label for="speedSlider">Speed:</label>
+                    <input type="range" id="speedSlider" name="speedSlider" min="1" max="60" value="10" step="1">
+                    <span id="speedValue">10</span> tps
+                </div>
+
+                <div class="ui-group" id="group-brush">
+                    <label for="neighborhoodSize">Brush:</label>
+                    <input type="range" id="neighborhoodSize" name="neighborhoodSize" min="0" max="20" value="1" step="1">
+                    <span id="neighborhoodValue">1</span>
+                </div>
+
+                <div class="ui-group" id="group-ruleset">
+                    <button id="randomRulesetButton">New Rules</button>
+                    <input type="checkbox" id="resetOnNewRuleCheckbox" title="Reset all world states when generating a new ruleset" checked>
+                </div>
+                <div class="ui-group" id="group-ruleset-input">
+                    <button id="copyRuleButton" title="Copy current ruleset hex code">Copy</button>
+                    <input type="text" id="rulesetInput" placeholder="32 hex chars">
+                    <button id="setRuleButton">Set</button>
+                </div>
+                <div class="ui-group" id="group-state">
+                    <button id="saveStateButton" title="Save current grid state">Save</button>
+                    <button id="loadStateButton" title="Load grid state from .json/.txt file">Load</button>
+                    <button id="resetStatesButton" title="Reset all worlds to initial densities">Reset All</button>
+                </div>
             </div>
-            <div id="stats-content">
+
+            <div class="ui-group" id="stats-content">
                 <h4>Selected World</h4>
                 <div>Ratio: <span id="stat-ratio">--</span>%</div>
                 <div>Avg: <span id="stat-avg-ratio">--</span>%</div>
