--- a/index.html
+++ b/index.html
@@ -21,27 +21,32 @@
                 </div>
                 <div class="ui-group" id="group-playback">
                     <button id="playPauseButton">Play</button>
-                    <label for="speedSlider">Speed:</label>
-                    <input type="range" id="speedSlider" name="speedSlider" min="1" max="60" value="10" step="1">
-                    <span id="speedValue">10</span> tps
+                    <label for="speedSlider"><svg style="width: 33px; transform: translate(3px, 3px) scale(1.15);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38 38" xml:space="preserve"><path fill="#ffffff" d="M29.3 31H8.7c-2.1 0-3.9-1.3-4.7-3.2C3.4 26 3 24 3 22c0-8.8 7.2-16 16-16s16 7.2 16 16c0 2-.4 4.1-1.1 5.8-.7 1.9-2.6 3.2-4.6 3.2zM19 8C11.3 8 5 14.3 5 22c0 1.8.3 3.6.9 5.1.5 1.1 1.6 1.9 2.8 1.9h20.6c1.2 0 2.4-.8 2.8-1.9.6-1.6.9-3.4.9-5.1 0-7.7-6.3-14-14-14z"/><path fill="#ffffff" d="m14 15.1-1.5-1.8-.8.6 1.5 1.8c.3-.2.5-.4.8-.6zM20 11h-1v2.5c.3 0 .7 0 1 .1V11zM11.9 17.3l-2-1.2-.5.9 2 1.2c.1-.4.3-.7.5-.9zM26.7 18.3 29 17l-.5-.9-2.3 1.3c.2.3.3.6.5.9zM10.7 20l-2.3-.4-.2 1 2.3.4c.1-.3.1-.6.2-1zM22.6 14.2l.9-2.4-.9-.3-.9 2.4.9.3zM27.5 21.1l2.7-.5-.2-1-2.7.5c.1.3.2.7.2 1zM25 15.9l1.7-2-.8-.6-1.7 2c.3.2.6.4.8.6zM16.7 13.8l-.8-2.3-.9.3.8 2.3.9-.3zM27.3 24l2.7.5.2-1-2.7-.5c-.1.3-.1.7-.2 1zM10.5 23.1l-2.3.4.2 1 2.3-.4c-.1-.4-.1-.7-.2-1z"/><g fill="#ffffff"><path d="m19 21 7.7-7.7M19 22c-.3 0-.5-.1-.7-.3-.4-.4-.4-1 0-1.4l7.7-7.7c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4l-7.7 7.7c-.2.2-.4.3-.7.3z"/></g><g><circle fill="#ffffff" cx="19" cy="21" r="2.5"/></g><g><path fill="#ffffff" d="M23.1 27h-8.3c-.5 0-.9-.4-.9-.9v-.3c0-.5.4-.9.9-.9h8.3c.5 0 .9.4.9.9v.3c0 .6-.4.9-.9.9z"/></g></svg></label>
+                    <div class="slider-container">
+                        <input type="range" id="speedSlider" name="speedSlider" min="1" max="60" value="10" step="1">
+                        <span id="speedValue">10</span>
+                    </div>
                 </div>
 
                 <div class="ui-group" id="group-brush">
-                    <label for="neighborhoodSize">Brush:</label>
-                    <input type="range" id="neighborhoodSize" name="neighborhoodSize" min="0" max="20" value="1"
-                        step="1">
-                    <span id="neighborhoodValue">1</span>
+                    <label for="neighborhoodSize"><svg style="width: 33px; transform: translate(3px, 3px) scale(1.0);" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="#ffffff" d="M25.26 2.7a4 4 0 0 0-5.55 1.07l-5.88 8.67a1 1 0 1 0 1.66 1.12l5.88-8.67a2 2 0 1 1 3.3 2.25l-7 10.26a4.87 4.87 0 0 0-1.46-1.47 5.68 5.68 0 0 0-4.69-.44 7.85 7.85 0 0 0-4.82 3.85 5.06 5.06 0 0 0-.43 2.34A10.55 10.55 0 0 1 6.09 24a12.7 12.7 0 0 1-1.84 4.36A1 1 0 0 0 5 29.89h1.12c6.3 0 11.33-2.7 12.42-6.77a7.59 7.59 0 0 0 0-3.52l7.79-11.34a4 4 0 0 0-1.07-5.56zm-8.61 19.93c-.81 3-4.83 5.11-9.84 5.28A14.51 14.51 0 0 0 8 24.4a12.51 12.51 0 0 0 .28-2.7 3.31 3.31 0 0 1 .24-1.52 6 6 0 0 1 3.58-2.77 4.85 4.85 0 0 1 1.41-.22 3 3 0 0 1 1.64.43c1.48.91 1.96 3.32 1.5 5.01z" data-name="paint brush"/></svg></label>
+                    <div class="slider-container">
+                        <input type="range" id="neighborhoodSize" name="neighborhoodSize" min="0" max="20" value="1"
+                            step="1">
+                        <span id="neighborhoodValue">1</span>
+                    </div>
                 </div>
 
                 <div class="ui-group" id="group-ruleset">
                     <button id="randomRulesetButton">New Rules</button>
                     <input type="checkbox" id="resetOnNewRuleCheckbox"
                         title="Reset all world states when generating a new ruleset" checked>
-                    <div class="bias-controls"> <input type="checkbox" id="useCustomBiasCheckbox" checked>
+                    <div class="bias-controls"> <input type="checkbox" id="useCustomBiasCheckbox">
                         <label for="useCustomBiasCheckbox" class="checkbox-label">Bias:</label>
-                        <input type="range" id="biasSlider" min="0" max="1" value="0.5" step="0.01"
-                            style="vertical-align: middle;">
-                        <span id="biasValueSpan">0.50</span>
+                        <div class="slider-container">
+                            <input type="range" id="biasSlider" min="0" max="1" value="0.5" step="0.001">
+                            <span id="biasValueSpan">0.50</span>
+                        </div>
                     </div>
                 </div>
                 <div class="ui-group" id="group-ruleset-input">
