--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     <button id="randomRulesetButton">New Rules</button>
                     <input type="checkbox" id="resetOnNewRuleCheckbox"
                         title="Reset all world states when generating a new ruleset" checked>
-                    <div class="bias-controls"> <input type="checkbox" id="useCustomBiasCheckbox" checked>
+                    <div class="bias-controls"> <input type="checkbox" id="useCustomBiasCheckbox">
                         <label for="useCustomBiasCheckbox" class="checkbox-label">Bias:</label>
                         <div class="slider-container">
-                            <input type="range" id="biasSlider" min="0" max="1" value="0.5" step="0.01">
+                            <input type="range" id="biasSlider" min="0" max="1" value="0.5" step="0.001">
                             <span id="biasValueSpan">0.50</span>
                         </div>
                     </div>
